unpackaged/main/default/objects/MLS_Board__c/MLS_Board__c.object-meta.xml
<CustomObject>
    <label>MLS Board</label>
    <nameField>
        <label>MLS Board Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MLS Boards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>