unpackaged/main/default/objects/MLS_Board__c/fields/High_Compliance__c.field-meta.xml
<CustomField>
    <fullName>High_Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Compliance</label>
    <type>Checkbox</type>
</CustomField>