unpackaged/main/default/objects/MLS_Board__c/fields/MLS_IDX_Compliance_Contact__c.field-meta.xml
<CustomField>
    <fullName>MLS_IDX_Compliance_Contact__c</fullName>
    <label>MLS/IDX/Compliance Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>