unpackaged/main/default/objects/MLS_Board__c/fields/Paperwork_Type__c.field-meta.xml
<CustomField>
    <fullName>Paperwork_Type__c</fullName>
    <label>Paperwork Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Physical IDX Agreement</fullName>
            </value>
            <value>
                <fullName>Physical Agreements</fullName>
            </value>
            <value>
                <fullName>Digital Agreements</fullName>
            </value>
            <value>
                <fullName>Client-Initiated</fullName>
            </value>
            <value>
                <fullName>Vendor-Friendly</fullName>
            </value>
            <value>
                <fullName>Opt-in</fullName>
            </value>
            <value>
                <fullName>Client-Initiated/Digital Agreements</fullName>
            </value>
            <value>
                <fullName>Client Initiated</fullName>
            </value>
            <value>
                <fullName>Physical IDX Agreement or Client?</fullName>
            </value>
            <value>
                <fullName>Alexander Team Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>