unpackaged/main/default/objects/MLS_Board__c/fields/Vendor_Source__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Source__c</fullName>
    <label>Vendor Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bridge Interactive</fullName>
            </value>
            <value>
                <fullName>Wolfnet</fullName>
            </value>
            <value>
                <fullName>Direct Integration</fullName>
            </value>
            <value>
                <fullName>MLS Grid</fullName>
            </value>
            <value>
                <fullName>Trestle</fullName>
            </value>
            <value>
                <fullName>FlexMLS</fullName>
            </value>
            <value>
                <fullName>Paragon</fullName>
            </value>
            <value>
                <fullName>Spark API</fullName>
            </value>
            <value>
                <fullName>Constellation</fullName>
            </value>
            <value>
                <fullName>Rapattoni</fullName>
            </value>
            <value>
                <fullName>The Matrix</fullName>
            </value>
            <value>
                <fullName>Really</fullName>
            </value>
            <value>
                <fullName>Navica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>