unpackaged/main/default/objects/MLS_Board__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Active__c</columns>
    <columns>NAME</columns>
    <columns>High_Compliance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>